--- a/index.html
+++ b/index.html
@@ -5,13 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="icon" href="imagens/omma-logo-black-top.png" type="imagem.png">
     <title>Omma - Receitas com afeto</title>
 </head>
 <body>
     <header>
-
+        <div class="logo">
+            <img src="imagens/logo.png" alt="logo Omma">
+        </div>
+        <div class="menu">
+            <nav>
+                <ul>
+                    <li><a href="index.html">Início</a></li>
+                    <li><a href="lista-receitas.html">Receitas</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
+        <section class="banner">
+            <div class="container">
+                <h1>Receitas <br> com afeto</h1>
+            </div>
+        </section>
 
     </main>
     <footer>
