--- a/index.html
+++ b/index.html
@@ -29,10 +29,50 @@
                 <h1>Receitas <br> com afeto</h1>
             </div>
         </section>
+        <section class="receitas-principais">
+            <div class="container">
+                <div class="titulo">
+                    <h2>Receitas da semana</h2>
+                </div>
+                <div class="lista-receitas">
+                    <article>
+                        <div class="thumb" style="background-image: url(imagens/risoto.png);"></div>
+                        <h3>Nome da receita</h3>
+                        <a href="receita.html">Conferir</a>
+                    </article>
+                    <article>
+                        <div class="thumb" style="background-image: url(imagens/bolo-banana.png);"></div>
+                        <h3>Nome da receita</h3>
+                        <a href="receita.html">Conferir</a>
+                    </article>
+                    <article>
+                        <div class="thumb" style="background-image: url(imagens/tabule.png);"></div>
+                        <h3>Nome da receita</h3>
+                        <a href="receita.html">Conferir</a>
+                    </article>
+                </div>
+            </div>
+        </section>
+        <section class="banner-secundario">
+            <div class="container">
+                <h2>Comer é viver</h2>
+                <p>
+                    Receitas preparadas com muito carinho, para que você possa sentir o prazer de preprarar uma deliciosa refeição para sua familia.
+                </p>
+                <p>
+                    Todas as receitas terá a lista de ingrediente indicando tudo que você precisa, além disso, terá as intruções de preparo.
+                </p>
+            </div>
 
+        </section>
     </main>
-    <footer>
 
+    <footer>
+        <div class="container">
+            <img src="imagens/logo.png" alt="Logo Omma">
+            <p>© 2023 omma - Todos os direitos são de vocês</p>
+        </div>
     </footer>
+    
 </body>
 </html>
