responsividade das páginas

--- a/receita.html
+++ b/receita.html
@@ -1,21 +1,146 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="icon" href="imagens/omma-logo-black-top.png" type="imagem.png">
     <title>Omma - Receitas com afeto</title>
 </head>
+
 <body>
     <header>
-
+        <div class="logo">
+            <img src="imagens/logo.png" alt="logo Omma">
+        </div>
+        <div class="menu">
+            <nav>
+                <ul>
+                    <li><a href="index.html">Início</a></li>
+                    <li><a href="lista-receitas.html">Receitas</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    <main>
 
-    </main>
+    <div class="receita-interna">
+        <main>
+            <section class="risoto-abobora">
+                <div class="container">
+                    <div class="titulo-receita">
+                        <h2>risoto de abobora</h2>
+                    </div>
+                    <img src="imagens/risoto.png" alt="Risoto de abobora">
+                    <div class="descrição">
+                        <p><small>Fácil</small></p>
+                        <p><small> Serve 4 pessoas</small></p>
+                    </div>
+                </div>
+
+                <article class="receita">
+                    <div class="container">
+                        <div class="receita-detalhada">
+                            <h4>Ingredientes</h4>
+                            <ul>
+                                <li>1/2 kg de abóbora tipo kabotchá</li>
+                                <li>2 colheres (sopa) de azeite</li>
+                                <li>1 cebola média bem picada</li>
+                                <li>1 dente de alho picado</li>
+                                <li>3 colheres (sopa) de cebolinha verde picada</li>
+                                <li>1/2 xícara (chá) de vinho banco seco</li>
+                                <li>2 xícaras (chá) de arroz arbóreo</li>
+                                <li>2 tabletes de caldo de galinha</li>
+                                <li>1 colher (chá) de ervas finas</li>
+                                <li>1 colher (café) de gengibre</li>
+                                <li>1 folha de louro</li>
+                                <li>2 colheres (sopa) de manteiga sem sal</li>
+                                <li>50 g de queijo parmesão ralado</li>
+                                <li>Salsinha picada a gosto</li>
+                                <li>Pimenta a gosto</li>
+                            </ul>
+                        </div>
+                    </div>
+                </article>
+
+                <div class="container">
+                    <h4>vídeo</h4>
+                    <iframe width="600" height="345" src="https://www.youtube.com/embed/Mxc3RQE4yAg"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                </div>
+
+                <article class="modo-preparo">
+                    <div class="container">
+                        <div class="preparo">
+                            <h4>Modo de Preparo</h4>
+                            <p>Descasque a abóbora e corte-a em cubinhos pequenos. Reserve. </p>
+                            <p>Coloque o azeite em uma panela funda e acrescente a cebola e o alho picados e leve ao
+                                fogo
+                                baixo até que a
+                                cebola e o alho murchem, mexendo sem parar.</p>
+                            <p>Adicione a cebolinha verde e a abóbora picada e deixe refogar por uns 3 minutos, mexendo
+                                sempre.</p>
+                            <p> Adicione 2 xícaras de chá de água fervente e os tabletes de caldo de galinha e deixe
+                                cozinhar para que a
+                                abóbora fique ligeiramente macia, por uns 10 minutos em fogo baixo. </p>
+                            <p>Aumente o fogo e acrescente o arroz arbóreo. Mexa bem e deixe levantar fervura.
+                                Acrescente as
+                                ervas
+                                finas, o
+                                gengibre e a folha de louro. Diminua a chama do fogão e sempre mexendo vá acrescentando
+                                água
+                                fervente
+                                quanto
+                                necessário. Leva em média de 15 a 20 minutos para adquirir o ponto cremoso. Quanto
+                                estive al
+                                dente
+                                acrescente a manteiga e o queijo parmesão ralado. Experimente o sal e acrescente pimenta
+                                a
+                                gosto.
+                                Desligue o
+                                fogo e tampe a panela. Deixe descansar por uns 5 minutos. Sirva regado com queijo
+                                parmesão
+                                ralado e
+                                salsinha
+                                picada.</p>
+                        </div>
+                    </div>
+                </article>
+
+            </section>
+        </main>
+
+        <aside>
+            <h4>receitas relacionadas</h4>
+            <div class="receitas-relacionadas">
+                <div class="receita-relacionada">
+                    <img src="imagens/bolo-banana.png" alt="Bolo de banana">
+                    <h5>receita</h5>
+                </div>
+                <div class="receita-relacionada">
+                    <img src="imagens/bolo-banana.png" alt="Bolo de banana">
+                    <h5>receita</h5>
+                </div>
+                <div class="receita-relacionada">
+                    <img src="imagens/bolo-banana.png" alt="Bolo de banana">
+                    <h5>receita</h5>
+                </div>
+            </div>
+        </aside>
+
+    </div>
+
     <footer>
-
+        <div class="container">
+            <img src="imagens/logo.png" alt="Logo Omma">
+            <p>© 2023 omma - Todos os direitos são de vocês</p>
+        </div>
     </footer>
+
 </body>
+
 </html>
