--- a/contato.html
+++ b/contato.html
@@ -4,18 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Omma - Receitas com afeto</title>
 </head>
 <body>
     <header>
-
+        <div class="logo">
+            <img src="imagens/logo.png" alt="Logo Omma">
+        </div>
+        <div class="menu">
+            <nav>
+                <ul>
+                    <li> <a href="index.html">Início</a> </li>
+                    <li> <a href="lista-receitas.html">Receitas</a> </li>
+                    <li> <a href="contato.html">Contato</a> </li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
-
+        <section class="banner-contato">
+            <div class="container">
+                <h1>manda um <br> alô :)</h1>
+            </div>
+        </section>
+        <section class="contato">
+            <div class="container">
+                <div class="banner-vertical"></div>
+                <div class="formulario">
+                    <h2>Contato</h2>
+                    <form action="">
+                        <input type="text" placeholder="nome" required>
+                        <input type="email" placeholder="email" required>
+                        <textarea name="mensagem" id="mensagem" placeholder="mensagem"></textarea>
+                        <button type="submit">enviar</button>
+                    </form>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
-
+        <div class="container">
+            <img src="imagens/logo.png" alt="Logo Omma">
+            <p>© 2023 omma - Todos os direitos são de vocês</p>
+        </div>
     </footer>
 </body>
 </html>
