--- a/lista-receitas.html
+++ b/lista-receitas.html
@@ -1,21 +1,94 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="icon" href="imagens/omma-logo-black-top.png" type="imagem.png">
     <title>Omma - Receitas com afeto</title>
 </head>
+
 <body>
     <header>
-
+        <div class="logo">
+            <img src="imagens/logo.png" alt="logo Omma">
+        </div>
+        <div class="menu">
+            <nav>
+                <ul>
+                    <li><a href="index.html">Início</a></li>
+                    <li><a href="lista-receitas.html">Receitas</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
+
     <main>
-
+        <section class="todas-receitas">
+            <div class="container">
+                <div class="titulo">
+                    <h2>Receitas da semana</h2>
+                </div>
+                <div class="lista-receitas">
+                    <article>
+                        <div class="thumb" style="background-image: url(imagens/risoto.png);"></div>
+                        <h3>Nome da receita</h3>
+                        <a href="receita.html">Conferir</a>
+                    </article>
+                    <article>
+                        <div class="thumb" style="background-image: url(imagens/bolo-banana.png);"></div>
+                        <h3>Nome da receita</h3>
+                        <a href="receita.html">Conferir</a>
+                    </article>
+                    <article>
+                        <div class="thumb" style="background-image: url(imagens/tabule.png);"></div>
+                        <h3>Nome da receita</h3>
+                        <a href="receita.html">Conferir</a>
+                    </article>
+                    <article>
+                        <div class="thumb" style="background-image: url(imagens/risoto.png);"></div>
+                        <h3>Nome da receita</h3>
+                        <a href="receita.html">Conferir</a>
+                    </article>
+                    <article>
+                        <div class="thumb" style="background-image: url(imagens/bolo-banana.png);"></div>
+                        <h3>Nome da receita</h3>
+                        <a href="receita.html">Conferir</a>
+                    </article>
+                    <article>
+                        <div class="thumb" style="background-image: url(imagens/tabule.png);"></div>
+                        <h3>Nome da receita</h3>
+                        <a href="receita.html">Conferir</a>
+                    </article>
+                    <article>
+                        <div class="thumb" style="background-image: url(imagens/risoto.png);"></div>
+                        <h3>Nome da receita</h3>
+                        <a href="receita.html">Conferir</a>
+                    </article>
+                    <article>
+                        <div class="thumb" style="background-image: url(imagens/bolo-banana.png);"></div>
+                        <h3>Nome da receita</h3>
+                        <a href="receita.html">Conferir</a>
+                    </article>
+                    <article>
+                        <div class="thumb" style="background-image: url(imagens/tabule.png);"></div>
+                        <h3>Nome da receita</h3>
+                        <a href="receita.html">Conferir</a>
+                    </article>
+                </div>
+            </div>
+        </section>
     </main>
-    <footer>
 
+    <footer>
+        <div class="container">
+            <img src="imagens/logo.png" alt="Logo Omma">
+            <p>© 2023 omma - Todos os direitos são de vocês</p>
+        </div>
     </footer>
+
 </body>
 </html>
