--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link rel="icon" href="imagens/omma-logo-black-top.png" type="imagem.png">
+    <link rel="icon" href="imagens/favicon-black.png" type="imagem.png">
     <title>Omma - Receitas com afeto</title>
 </head>
 <body>
@@ -37,17 +37,17 @@
                 <div class="lista-receitas">
                     <article>
                         <div class="thumb" style="background-image: url(imagens/risoto.png);"></div>
-                        <h3>Nome da receita</h3>
+                        <h3>risoto de abobora</h3>
                         <a href="receita.html">Conferir</a>
                     </article>
                     <article>
                         <div class="thumb" style="background-image: url(imagens/bolo-banana.png);"></div>
-                        <h3>Nome da receita</h3>
+                        <h3>bolo de banana</h3>
                         <a href="receita.html">Conferir</a>
                     </article>
                     <article>
                         <div class="thumb" style="background-image: url(imagens/tabule.png);"></div>
-                        <h3>Nome da receita</h3>
+                        <h3>tabule</h3>
                         <a href="receita.html">Conferir</a>
                     </article>
                 </div>
