--- a/lista-receitas.html
+++ b/lista-receitas.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link rel="icon" href="imagens/omma-logo-black-top.png" type="imagem.png">
+    <link rel="icon" href="imagens/favicon-black.png" type="imagem.png">
     <title>Omma - Receitas com afeto</title>
 </head>
 
@@ -34,48 +34,48 @@
                 </div>
                 <div class="lista-receitas">
                     <article>
-                        <div class="thumb" style="background-image: url(imagens/risoto.png);"></div>
+                        <div class="thumb" style="background-image: url(imagens/risoto.jpg);"></div>
+                        <h3>risoto de abobora</h3>
+                        <a href="receita.html">Conferir</a>
+                    </article>
+                    <article>
+                        <div class="thumb" style="background-image: url(imagens/bolo-banana.jpg);"></div>
+                        <h3>bolo de banana</h3>
+                        <a href="receita.html">Conferir</a>
+                    </article>
+                    <article>
+                        <div class="thumb" style="background-image: url(imagens/tabule.jpg);"></div>
+                        <h3>tabule</h3>
+                        <a href="receita.html">Conferir</a>
+                    </article>
+                    <article>
+                        <div class="thumb" style="background-image: url(imagens/moqueca.jpg);"></div>
+                        <h3>moqueca</h3>
+                        <a href="receita.html">Conferir</a>
+                    </article>
+                    <article>
+                        <div class="thumb" style="background-image: url(imagens/risoto.jpg);"></div>
+                        <h3>risoto de abobora</h3>
+                        <a href="receita.html">Conferir</a>
+                    </article>
+                    <article>
+                        <div class="thumb" style="background-image: url(imagens/ratatouille.jpg);"></div>
+                        <h3>ratatouille</h3>
+                        <a href="receita.html">Conferir</a>
+                    </article>
+                    <article>
+                        <div class="thumb" style="background-image: url(imagens/tabule.jpg);"></div>
+                        <h3>tabule</h3>
+                        <a href="receita.html">Conferir</a>
+                    </article>
+                    <article>
+                        <div class="thumb" style="background-image: url(imagens/bolo-banana.jpg);"></div>
                         <h3>Nome da receita</h3>
                         <a href="receita.html">Conferir</a>
                     </article>
                     <article>
-                        <div class="thumb" style="background-image: url(imagens/bolo-banana.png);"></div>
-                        <h3>Nome da receita</h3>
-                        <a href="receita.html">Conferir</a>
-                    </article>
-                    <article>
-                        <div class="thumb" style="background-image: url(imagens/tabule.png);"></div>
-                        <h3>Nome da receita</h3>
-                        <a href="receita.html">Conferir</a>
-                    </article>
-                    <article>
-                        <div class="thumb" style="background-image: url(imagens/risoto.png);"></div>
-                        <h3>Nome da receita</h3>
-                        <a href="receita.html">Conferir</a>
-                    </article>
-                    <article>
-                        <div class="thumb" style="background-image: url(imagens/bolo-banana.png);"></div>
-                        <h3>Nome da receita</h3>
-                        <a href="receita.html">Conferir</a>
-                    </article>
-                    <article>
-                        <div class="thumb" style="background-image: url(imagens/tabule.png);"></div>
-                        <h3>Nome da receita</h3>
-                        <a href="receita.html">Conferir</a>
-                    </article>
-                    <article>
-                        <div class="thumb" style="background-image: url(imagens/risoto.png);"></div>
-                        <h3>Nome da receita</h3>
-                        <a href="receita.html">Conferir</a>
-                    </article>
-                    <article>
-                        <div class="thumb" style="background-image: url(imagens/bolo-banana.png);"></div>
-                        <h3>Nome da receita</h3>
-                        <a href="receita.html">Conferir</a>
-                    </article>
-                    <article>
-                        <div class="thumb" style="background-image: url(imagens/tabule.png);"></div>
-                        <h3>Nome da receita</h3>
+                        <div class="thumb" style="background-image: url(imagens/moqueca.jpg);"></div>
+                        <h3>moqueca</h3>
                         <a href="receita.html">Conferir</a>
                     </article>
                 </div>
