--- a/receita.html
+++ b/receita.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link rel="icon" href="imagens/omma-logo-black-top.png" type="imagem.png">
+    <link rel="icon" href="imagens/favicon-black.png" type="imagem.png">
     <title>Omma - Receitas com afeto</title>
 </head>
 
@@ -116,19 +116,17 @@
 
         <aside>
             <h4>receitas relacionadas</h4>
-            <div class="receitas-relacionadas">
-                <div class="receita-relacionada">
-                    <img src="imagens/bolo-banana.png" alt="Bolo de banana">
-                    <h5>receita</h5>
-                </div>
-                <div class="receita-relacionada">
-                    <img src="imagens/bolo-banana.png" alt="Bolo de banana">
-                    <h5>receita</h5>
-                </div>
-                <div class="receita-relacionada">
-                    <img src="imagens/bolo-banana.png" alt="Bolo de banana">
-                    <h5>receita</h5>
-                </div>
+            <div class="receita-relacionada">
+                <img class="img-aside" src="imagens/moqueca.png" alt="moqueca">
+                <h5>moqueca</h5>
+            </div>
+            <div class="receita-relacionada">
+                <img class="img-aside" src="imagens/bolo-banana.png" alt="Bolo de banana">
+                <h5>bolo de banana</h5>
+            </div>
+            <div class="receita-relacionada">
+                <img class="img-aside" src="imagens/tabule.png" alt="tabule">
+                <h5>tabule</h5>
             </div>
         </aside>
 
